RESOLVED FIXED243712
[Painting] TextDecorationPainter c'tor should not take geometries/text run
https://bugs.webkit.org/show_bug.cgi?id=243712
Summary [Painting] TextDecorationPainter c'tor should not take geometries/text run
alan
Reported 2022-08-08 20:30:49 PDT
ssia
Attachments
Patch (21.73 KB, patch)
2022-08-08 20:37 PDT, alan
no flags
alan
Comment 1 2022-08-08 20:37:25 PDT
EWS
Comment 2 2022-08-10 07:41:21 PDT
Committed 253293@main (0e1d81afb233): <https://commits.webkit.org/253293@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461498 [details].
Radar WebKit Bug Importer
Comment 3 2022-08-10 07:42:16 PDT
Note You need to log in before you can comment on or make changes to this bug.