Cherry-pick 0e1d81afb233. rdar://problem/101002470

[Painting] TextDecorationPainter c'tor should not take geometries/text run
    https://bugs.webkit.org/show_bug.cgi?id=243712

    Reviewed by Antti Koivisto.

    Let's pass in all the geometry info to TextDecorationPainter's paint functions instead of passing half here, half at construction time. TextDecorationPainter c'tor only takes style (and related) arguments.
    This is in preparation for support decorating box based underling painting.

    * Source/WebCore/rendering/TextBoxPainter.cpp:
    (WebCore::TextBoxPainter<TextBoxPath>::paintForegroundAndDecorations):
    (WebCore::TextBoxPainter<TextBoxPath>::createDecorationPainter):
    (WebCore::TextBoxPainter<TextBoxPath>::paintBackgroundDecorations):
    (WebCore::TextBoxPainter<TextBoxPath>::paintForegroundDecorations):
    * Source/WebCore/rendering/TextBoxPainter.h:
    * Source/WebCore/rendering/TextDecorationPainter.cpp:
    (WebCore::TextDecorationPainter::TextDecorationPainter):
    (WebCore::TextDecorationPainter::paintBackgroundDecorations):
    (WebCore::TextDecorationPainter::paintForegroundDecorations):
    (WebCore::TextDecorationPainter::paintLineThrough):
    * Source/WebCore/rendering/TextDecorationPainter.h:
    (WebCore::TextDecorationPainter::textDecorations const):

    Canonical link: https://commits.webkit.org/253293@main

Canonical link: https://commits.webkit.org/252432.754@safari-7614-branch